<resources>
    <string name="app_name">ViCall</string>
    <string name="default_notification_channel_id">notification_channel_id_vicall</string>
    <string name="slogan">Thông điệp độc đáo - Cuộc gọi ý nghĩa</string>
    <string name="no_email_client">There are no email clients installed.</string>
    <string name="no_email">No email found</string>
    <string name="feedback">Phản hồi/Góp ý</string>
    <string name="invite_friend">Mời bạn bè</string>
    <string name="ok">OK</string>
    <string name="no">Không</string>
    <string name="cancel">Hủy</string>
    <string name="close">Đóng</string>
    <string name="err_caller_is_unavailable">Không thể thực hiện cuộc gọi trên thiết bị này</string>
    <string name="err_network_not_available">Không có kết nối mạng</string>
    <string name="err_no_data_found">Không tìm thấy dữ liệu</string>
    <string name="err_no_browser_installed">Thiết bị này chưa cài đặt trình duyệt</string>
    <string name="just_now">Vừa xong</string>
    <string name="_minute_ago">%1$s phút trước</string>
    <string name="_hour_ago">%1$s giờ trước</string>
    <string name="home">Trang chủ</string>
    <string name="contact">Danh bạ</string>
    <string name="video">Video</string>
    <string name="setting">Cài đặt</string>
    <string name="skip">Bỏ qua</string>
    <string name="desc_permission_caller_id_api_less_than_29">Để sử dụng tính năng Caller ID, ViCall cần bạn cho phép các quyền: Hiển thị lên ứng dụng khác, quản lý cuộc gọi</string>
    <string name="desc_permission_caller_id_api_29">Để sử dụng tính năng Caller ID, ViCall cần bạn cho phép các quyền: Hiển thị lên ứng dụng khác, chặn spam, quản lý cuộc gọi</string>
    <string name="hello">Xin chào,</string>
    <string name="enter_phone_number_to_use_service">Nhập số điện thoại để sử dụng dịch vụ</string>
    <string name="your_phone_number">Số điện thoại của bạn</string>
    <string name="start">Bắt đầu</string>
    <string name="desc_term_and_condition">Bằng cách nhấp vào \"Bắt đầu\", dù bạn cư trú ở bất kỳ quốc gia nào, bạn chấp thuận đã đọc và đồng ý với %1$s và %2$s</string>
    <string name="term">Điều khoản Dịch vụ</string>
    <string name="privacy_policy">Chính sách quyền riêng tư</string>
    <string name="forgot_password">Quên mật khẩu?</string>
    <string name="next">Tiếp theo</string>
    <string name="use_another_account">Sử dụng tài khoản khác</string>
    <string name="enter_your_password">Nhập mật khẩu của bạn</string>
    <string name="err_phone_empty">Bạn chưa nhập số điện thoại</string>
    <string name="err_password_empty">Bạn chưa nhập mật khẩu</string>
    <string name="err_password_retype_not_match">Mật khẩu không khớp</string>
    <string name="err_not_received_otp">Không nhận được OTP, vui lòng thử lại sau</string>
    <string name="err_otp_not_full_filled">Vui lòng nhập đủ %1$d chữ số</string>
    <string name="err_common">Có lỗi xảy ra, vui lòng thử lại sau. Code: %1$d</string>
    <string name="please_enter_otp">Vui lòng nhập mã xác thực vào ô bên dưới</string>
    <string name="code_expire_in_">Mã hết hạn trong %1$s</string>
    <string name="code_expired">Mã này đã hết hạn</string>
    <string name="validate_otp">Xác thực OTP</string>
    <string name="we_can_call_you_is">Chúng tôi có thể gọi bạn là?</string>
    <string name="create_profile">Tạo hồ sơ</string>
    <string name="update_profile">Cập nhật hồ sơ</string>
    <string name="confirm">Xác nhận</string>
    <string name="upload_image">Tải ảnh lên</string>
    <string name="take_a_picture">Chụp ảnh</string>
    <string name="select_from_album">Chọn từ album</string>
    <string name="remove_this_image">Xóa ảnh này</string>
    <string name="err_no_camera">Không tìm thấy camera</string>
    <string name="err_name_empty">Bạn chưa nhập tên</string>
    <string name="play_video_sound">Phát âm thanh khi hiển thị video</string>
    <string name="show_personal_info">Hiển thị thông tin cá nhân</string>
    <string name="setup_calling_info">Thiết lập hiển thị khi gọi</string>
    <string name="setup_incoming_video">Thiết lập video cuộc gọi</string>
    <string name="video_duration">Thời gian hiển thị video</string>
    <string name="introduction">Giới thiệu</string>
    <string name="guide">Hướng dẫn sử dụng</string>
    <string name="logout">Đăng xuất</string>
    <string name="desc_create_password">Để thuận tiện cho lần đăng nhập tiếp theo, bạn vui lòng tạo mật khẩu trước khi đăng xuất nhé</string>
    <string name="create_password">Tạo mật khẩu</string>
    <string name="create_password_for_logging_in_later">Tạo mật khẩu cho những lần đăng nhập sau</string>
    <string name="password">Mật khẩu</string>
    <string name="retype_password">Nhập lại mật khẩu</string>
    <string name="created_password_success">Tạo mật khẩu thành công</string>
    <string name="search_name_or_phone">Tìm kiếm tên hoặc số điện thoại</string>
    <string name="call_history">Lịch sử cuộc gọi</string>
    <string name="spam_call">Cuộc gọi spam</string>
    <string name="blocked_call">Cuộc gọi bị chặn</string>
    <string name="desc_call_log_permission">Để có trải nghiệm tốt nhất, bạn vui lòng cấp quyền truy cập lịch sử cuộc gọi.</string>
    <string name="desc_default_dialer_permission">Để có trải nghiệm tốt nhất, ViCall cần bạn cấp quyền làm ứng dụng Điện thoại mặc định.</string>
    <string name="grant_right_now"><u>Cấp quyền ngay</u></string>
    <string name="today">Hôm nay</string>
    <string name="yesterday">Hôm qua</string>
    <string name="call_time_">%1$s, %2$s</string>
    <string name="report_spam">Báo cáo spam</string>
    <string name="remove_spam">Bỏ spam</string>
    <string name="delete">Xóa</string>
    <string name="no_spam_call">Không có cuộc gọi spam</string>
    <string name="no_blocked_call">Không có cuộc gọi bị chặn</string>
    <string name="no_call_log">Lịch sử cuộc gọi của bạn hiện đang trống</string>
    <string name="reported_spam_success">Đã gửi báo cáo spam</string>
    <string name="unblock">Bỏ chặn</string>
    <string name="unblock_success">Đã bỏ chặn thuê bao %1$s</string>
    <string name="block_success_">Đã chặn thuê bao %1$s</string>
    <string name="unblock_success_">Đã bỏ chặn thuê bao %1$s</string>
    <string name="quick_contact">Liên lạc nhanh</string>
    <string name="edit">Chỉnh sửa</string>
    <string name="phone">Điện thoại</string>
    <string name="email">Email</string>
    <string name="video_call">Video cuộc gọi</string>
    <string name="incoming_call">Gọi đến</string>
    <string name="missed_call">Gọi nhỡ</string>
    <string name="outgoing_call">Gọi đi</string>
    <string name="rejected">Từ chối</string>
    <string name="blocked">Bị chặn</string>
    <string name="hour">giờ</string>
    <string name="minutes">phút</string>
    <string name="seconds">giây</string>
    <string name="call">Gọi</string>
    <string name="message">Nhắn tin</string>
    <string name="spam">Spam</string>
    <string name="block">Chặn</string>
    <string name="setting_when_calling">Thiết lập hiển thị khi gọi</string>
    <string name="display_name">Hiển thị tên</string>
    <string name="display_avatar">Hiển thị ảnh đại diện</string>
    <string name="display_status">Hiển thị trạng thái</string>
    <string name="display_video">Hiển thị video</string>
    <string name="video_display_time">Thời gian hiển thị video</string>
    <string name="selected_time_period">Video sẽ hiển thị trên máy người nhận trong khoảng thời gian lựa chọn</string>
    <string name="start_from">Bắt đầu từ</string>
    <string name="finishes">Kết thúc</string>
    <string name="notification">Thông báo</string>
    <string name="not_notification">Hiện chưa có thông báo</string>
    <string name="notification_detail">Chi tiết thông báo</string>
    <string name="post_time_">Đăng lúc %1$s</string>
    <string name="authentic_to_experience_the_service">Xác thực để trải nghiệm dịch vụ</string>
    <string name="agree_to_terms_and_services">Tôi đồng ý với %1$s và %2$s của ViCall</string>
    <string name="not_advertising">Không quảng cáo</string>
    <string name="content_not_advertising">Trải nghiệm ViCall mà không có bất kỳ băng rôn quảng cáo nào</string>
    <string name="share_video">Chia sẻ thông điệp Video</string>
    <string name="content_share_video">Thay thế nhạc chuông của bạn bè bằng thông điệp Video một cách độc đáo</string>
    <string name="identify_information">Nhận biết thông tin người gọi</string>
    <string name="content_identify_information">Nhận ID người gọi từ bất kỳ số lạ nào</string>
    <string name="sign">Phù hiệu Premium</string>
    <string name="content_sign">Chuyên nghiệp hơn khi bạn thực hiện cuộc gọi</string>
    <string name="message_confirm_agree_term_and_policy">Bạn chưa đồng ý với điều khoản và chính sách của ViCall</string>
    <string name="desc_contact_permission">Để có trải nghiệm tốt hơn, ViCall cần bạn cho phép truy cập danh bạ điện thoại.</string>
    <string name="all_contact">Tất cả liên lạc</string>
    <string name="spam_list">Danh sách spam</string>
    <string name="blocked_list">Danh sách chặn</string>
    <string name="no_contact">Danh bạ của bạn hiện đang trống</string>
    <string name="no_contact_spam">Danh sách spam hiện đang trống</string>
    <string name="no_contact_blocked">Danh sách chặn hiện đang trống</string>
    <string name="result">Kết quả</string>
    <string name="point_history">Lịch sử tích điểm</string>
    <string name="accumulated_points">Điểm tích lũy</string>
    <string name="exchange_gift">Đổi quà</string>
    <string name="newest">Mới nhất</string>
    <string name="used_most">Sử dụng nhiều</string>
    <string name="free_vi">Miễn phí</string>
    <string name="free">Free</string>
    <string name="vi_store">Vi store</string>
    <string name="my_videos">Video của tôi</string>
    <string name="version_">Phiên bản %1$s</string>
    <string name="all_video">Toàn bộ video</string>
    <string name="upload">Tải lên</string>
    <string name="no_video">Không tìm thấy video</string>
    <string name="_vnd">%1$sđ</string>
    <string name="show_incoming_video">Hiển thị video của người gọi</string>
    <string name="turn_on_video_sound">Bật tiếng</string>
    <string name="read_notify_all_success">Đánh dấu toàn bộ thông báo đã đọc thành công.</string>
    <string name="user_level">Cấp thành viên</string>
    <string name="collection">Bộ sưu tập</string>
    <string name="see_more">Xem thêm</string>
    <string name="status">Cảm xúc của bạn là gì?</string>
    <string name="not_null_content">Không được để trống nội dung, vui lòng thử lại sau</string>
    <string name="update_status_success">Cập nhật trạng thái thành công.</string>
    <string name="registered_service_already">Bạn đã đăng ký dịch vụ rồi</string>
    <string name="grant_permissions">Cấp quyền cho ứng dụng</string>
    <string name="storage">Bộ nhớ</string>
    <string name="desc_step_1_to_allow_other_permissions"><i>Bước 1.</i> Mở màn <b>Cài Đặt</b>, nếu điện thoại của bạn có mục <b>Quyền khác</b> như hình bên dưới thì hãy bấm vào đó và đi tới bước 2.</string>
    <string name="desc_step_2_to_allow_other_permissions"><i>Bước 2.</i> Nếu bạn thấy 2 quyền như hình dưới chưa được <b>Chấp nhận</b>, hãy thử chấp nhận cả 2 (quyền được chấp nhận có dấu tích tròn màu xanh).</string>
    <string name="open_settings_page"><u>Mở màn Cài đặt</u></string>
    <string name="asterisk_symbol">\u2217</string>
    <string name="shark_symbol">#</string>
    <string name="number_zero">0</string>
    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="number_six">6</string>
    <string name="number_seven">7</string>
    <string name="number_eight">8</string>
    <string name="number_nine">9</string>
</resources>