<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/dimen_2x"
        android:paddingEnd="@dimen/dimen_2x">

        <TextView
            style="@style/TextView.Regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_2x"
            android:text="@string/desc_step_1_to_allow_other_permissions" />

        <TextView
            android:id="@+id/btnOpenSettings"
            style="@style/TextView.Regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_white_not_radius"
            android:paddingTop="@dimen/dimen_1x"
            android:paddingBottom="@dimen/dimen_1x"
            android:text="@string/open_settings_page"
            android:textColor="@color/buttonPrimary" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_2x"
            android:contentDescription="@string/app_name"
            android:src="@drawable/img_vicall_settings_page" />

        <TextView
            style="@style/TextView.Regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_2x"
            android:text="@string/desc_step_2_to_allow_other_permissions" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_2x"
            android:layout_marginBottom="@dimen/dimen_2x"
            android:contentDescription="@string/app_name"
            android:src="@drawable/img_vicall_settings_other_permissions_page" />
    </LinearLayout>
</ScrollView>
