<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/swchVideo"
        android:layout_width="@dimen/zero"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_2x"
        android:layout_marginTop="@dimen/dimen_2x"
        android:layout_marginEnd="@dimen/dimen_2x"
        android:contentDescription="@string/app_name"
        android:foreground="?android:selectableItemBackground"
        android:text="@string/show_incoming_video"
        android:textSize="@dimen/text_size_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/chkVideoSound"
        style="@style/TextView.Light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_2x"
        android:text="@string/turn_on_video_sound"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@+id/swchVideo"
        app:layout_constraintTop_toBottomOf="@+id/swchVideo" />
</androidx.constraintlayout.widget.ConstraintLayout>