<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/label_desc"
        style="@style/TextView.Regular"
        android:layout_width="@dimen/zero"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_3x"
        android:layout_marginTop="@dimen/dimen_x2x"
        android:layout_marginEnd="@dimen/dimen_3x"
        android:gravity="center_horizontal"
        android:text="@string/create_password_for_logging_in_later"
        android:textSize="@dimen/text_size_15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtPassword"
        style="@style/EditText.Regular"
        android:layout_width="@dimen/zero"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_3x"
        android:layout_marginTop="@dimen/dimen_x2x"
        android:layout_marginEnd="@dimen/dimen_3x"
        android:autofillHints="@string/password"
        android:background="@drawable/bg_radius_white_grey_border"
        android:drawableStart="@drawable/ic_lock_grey"
        android:drawablePadding="@dimen/dimen_x1x"
        android:hint="@string/password"
        android:imeOptions="actionNext"
        android:inputType="textPassword"
        android:maxLength="50"
        android:paddingEnd="@dimen/dimen_4x"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_desc" />

    <ImageView
        android:id="@+id/imgTogglePassword"
        android:layout_width="@dimen/dimen_4x"
        android:layout_height="@dimen/dimen_4x"
        android:layout_marginEnd="@dimen/dimen_05x"
        android:background="@drawable/btn_circle_white_transparent_25"
        android:contentDescription="@string/app_name"
        android:padding="@dimen/dimen_10"
        android:src="@drawable/ic_eye_black"
        android:tint="@color/grey"
        app:layout_constraintBottom_toBottomOf="@+id/txtPassword"
        app:layout_constraintEnd_toEndOf="@+id/txtPassword"
        app:layout_constraintTop_toTopOf="@+id/txtPassword" />

    <EditText
        android:id="@+id/txtRetypePassword"
        style="@style/EditText.Regular"
        android:layout_width="@dimen/zero"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_2x"
        android:autofillHints="@string/retype_password"
        android:background="@drawable/bg_radius_white_grey_border"
        android:drawableStart="@drawable/ic_lock_grey"
        android:drawablePadding="@dimen/dimen_x1x"
        android:hint="@string/retype_password"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:maxLength="50"
        android:paddingEnd="@dimen/dimen_4x"
        app:layout_constraintEnd_toEndOf="@+id/txtPassword"
        app:layout_constraintStart_toStartOf="@+id/txtPassword"
        app:layout_constraintTop_toBottomOf="@+id/txtPassword" />

    <ImageView
        android:id="@+id/imgToggleRetypePassword"
        android:layout_width="@dimen/dimen_4x"
        android:layout_height="@dimen/dimen_4x"
        android:layout_marginEnd="@dimen/dimen_05x"
        android:background="@drawable/btn_circle_white_transparent_25"
        android:contentDescription="@string/app_name"
        android:padding="@dimen/dimen_10"
        android:src="@drawable/ic_eye_black"
        android:tint="@color/grey"
        app:layout_constraintBottom_toBottomOf="@+id/txtRetypePassword"
        app:layout_constraintEnd_toEndOf="@+id/txtRetypePassword"
        app:layout_constraintTop_toTopOf="@+id/txtRetypePassword" />

    <TextView
        android:id="@+id/btnConfirm"
        style="@style/Button.PrimaryNotRadius"
        android:layout_width="@dimen/zero"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
